kustomize/helloworld/public/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: dashboard
      port: 8080
      targetPort: 8080

  type: NodePort
