kustomize/helloworld/public/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.dev.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: traefik-ingress-service
              port:
                name: admin
